@@ -10,6 +10,7 @@ $Id$
 	Changed top of help to use 'show' instead of M-x
 	Fixed a bug in the summary field for user-created aliases
 	Added "reply zaway" which sends a zaway response to the current msg.
+	Added "edit:delete-prev-word" command and bound M-BACKSPACE to it.
 		
 1.2.1-pre-1
 	Added RCS Id strings to all files.
